data/derived/fa15/progs/unify/prog3425.ml.out
Characters 333-338:
  if i * h > 10 then mulByDigit i t' @ [carry i h' + remainder h' i] @ [remainder h i] else i * h;;
                                                                                            ^^^^^
Error: This expression has type int but an expression was expected of type
         int list
